css overflow fixes + regex halfway done

--- a/paralleux.css
+++ b/paralleux.css
@@ -127,9 +127,9 @@ body {
   position: absolute;
   top: 0; left: 50%;
   translate: -50% 0;
-  width: 98vw;
-  height: 100vh;
-  overflow-y: hidden;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   pointer-events: none;
 }
 
@@ -639,7 +639,7 @@ I presume it was because of border-left being 2px and y-axis being a copied rota
 
 #info-button {
   position: absolute;
-  left: 96%; top: 102%;
+  right: 20px; top: calc(100% + 20px);
 }
 
 .info-btn i { 
